Fix black side bars in dark mode

--- a/assets/css/giellalt-site-global.scss
+++ b/assets/css/giellalt-site-global.scss
@@ -16,7 +16,7 @@
   --code-text: #e6edf3;
   --code-border: #30363d;
   --code-link-color: #96d0ff;
-  --menu-bg: #010409;
+  --menu-bg: #0d1117;
   --menu-text: #e6edf3;
   --menu-hover-bg: rgba(56, 139, 253, 0.1);
   --menu-hover-text: #58a6ff;
